# eecs483-procedures

./: .gitignore  .rustfmt.toml  Cargo.toml  mk_submission.sh
examples/: basic_print.cobra  duplicate_corecursive_fun.cobra  extern_arity_mismatch.cobra  extern_big_nine.cobra  extern_big_ten.cobra  extern_param_dupe.cobra  extern_shadowing.cobra  fib_non_tail.cobra  free.adder  let_dupe.adder  local_arity_mismatch.cobra  local_big_eight.cobra  local_non_tail_call.cobra  more_print.cobra  no_arity_mismatch.cobra  non_tail_factorial.cobra  peano.boa  pow.cobra  print.cobra  recursive_main_factorial.cobra  tail_and_normal.cobra  tail_recursive_main.cobra  unbound_local_fun.cobra  unbound_print.cobra
examples/control-flow-examples/: add1.boa  arity_mismatch.boa  cmp_pos.boa  corecursive.boa  fib.boa  fun_dupe.boa  fun_if_nested.boa  if_0.boa  if_after_let.boa  if_neg.boa  if_nested.boa  if_simple.boa  let_in_if_in_let.boa  not.boa  or_4_2.boa  param_dupe.boa  simple_call.boa  tail_call_bad.boa  tail_call_bad_if.boa  tail_call_bad_if_nested.boa  tail_call_good_if.boa  var_dupe.boa
runtime/: stub.rs
src/: asm.rs  ast.rs  backend.rs  compile.rs  frontend.rs  identifiers.rs  interp.rs  lib.rs  main.rs  middle_end.rs  parser.lalrpop  parser.rs  pretty.rs  runner.rs  span.rs  ssa.rs  txt.rs
tests/: examples.rs
