[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
lalrpop-util = { version = "0.22", features = [ "lexer" ] }
regex = "1"
clap = { version = "4.5", features = ["derive"] }
im = "15.1"
